--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body{
 }
 
 p, h1{
+  margin:unset;
+  padding: unset;
+}
+
+p, h1{
   font-size: 14px;
   font-weight: normal;
   font-family: arial;
@@ -23,16 +28,20 @@ p, h1{
   height: 326px;
   margin: 150px auto;
 
+  border-radius: 10px;
+
   
 }
 
 /*main*/
 .main{
-  box-shadow: inset 0 0 20px red;
+  
 }
 
 .chat-wrapper{
   display: flex;
+  gap: 18px;
+  margin:20px;
 }
 
 .profile-img{
@@ -43,7 +52,31 @@ p, h1{
   border: solid 4px #ffffff;
 }
 
+.bubble{
+  background-color: #ffffff;
+  border-radius: 8px;
+}
+
 /*footer*/
 .footer{
-  box-shadow: inset 0 0 20px red;
+  display: flex;
+  align-items: center;
+}
+
+.out-log{
+  color: #999999;
+  font-size: 12px;
+  align-items: center;
+  line-height: 18px;
+  width: 200px;
+  
+}
+
+.dummy{
+  display: block;
+  width: 200px;
+  height: 1px;
+  margin: 20px;
+  background-color: #999999;
+
 }
